# OX-King

./: .gitignore  README.md  pyproject.toml
Discord/: .replit  database.db  main.py  rank_card.py  requirements.txt
Discord/utils/: db.py  leaderboard.py  rank_card.py
